--- a/style.css
+++ b/style.css
@@ -1,445 +1,399 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-* {
-    font-family: 'Oleo Script Swash Caps', cursive;
-    font-family: 'Open Sans', sans-serif;
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    background-color: #000235;
-    margin: 0;
-    padding: 0;
-}
-
-.container {
-    max-width: 1200px;
-    margin: auto;
-    padding: 0 30px;
-}
-
-.navbar {
-    display: flex;
-    justify-content: space-between;
-}
-
-nav ul {
-    display: flex;
-    gap: 10px;
-}
-
-.logo {
-    text-decoration: none;
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-    margin-top: 3rem;
-}
-
-ul li {
-    list-style: none;
-    text-decoration: none;
-    color: white;
-    margin-inline: 15px;
-    font-size: 17px;
-    font-weight: bold;
-    text-transform: uppercase;
-    margin-top: 3rem;
-}
-
-button {
-    background-color: #2d2879;
-    font-size: 10px;
-    font-weight: bold;
-    color: white;
-    padding: 15px 35px;
-    border-radius: 50px;
-}
-
-.dot {
-    height: 17px;
-    width: 17px;
-    background-color: #9091dc;
-    border-radius: 50%;
-    display: inline-block;
-    position: relative;
-    left: -10px;
-    bottom: -3px;
-}
-
-button {
-    margin-top: 30px;
-    border: none;
-}
-
-button a {
-    color: wheat;
-    text-decoration: none;
-}
-
-.icon1 {
-    font-size: 15px;
-    margin-right: 12px;
-    color: white;
-}
-
-.icon {
-    display: none;
-    color: white;
-    align-items: center;
-    font-size: 30px;
-    margin-right: 12px;
-    margin-top: 2.5rem;
-}
-
-
-/* nav bar end */
-
-.hero-section {
-    color: white;
-}
-
-.hero-div {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.hero-section .left h1 {
-    max-width: 400px;
-    font-size: 80px;
-    margin: auto;
-}
-
-.end-herosection {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 80px;
-}
-
-
-/* hero-section-end */
-
-.links {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    gap: 100px;
-}
-
-.p-content {
-    max-width: 360px;
-    font-size: 20px;
-}
-
-.link1,
-.link2 {
-    font-weight: bold;
-    font-size: 20px;
-    color: white;
-    text-decoration: none;
-    border: 2px solid #fff;
-    padding: 8px 12px;
-    border-radius: 24px;
-    max-width: 250px;
-    flex-basis: 50%;
-    display: block;
-}
-
-.link1 {
-    border: none;
-    background-color: #9091dc;
-}
-
-.feature {
-    margin-top: 5rem;
-}
-
-h2 {
-    color: #fff;
-    text-transform: uppercase;
-    margin-bottom: 30px;
-}
-
-.feature-div {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    border: 3px solid rgba(0, 0, 0, 0.856);
-    min-height: 100px;
-    border-radius: 10px;
-}
-
-
-/* features section end */
-
-.hero-analytics {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    color: #fff;
-    padding: 50px;
-    gap: 50px;
-}
-
-.text1 {
-    text-transform: uppercase;
-    color: rgb(222, 226, 226);
-    margin-bottom: 10px;
-}
-
-.text2 {
-    max-width: 500px;
-    font-size: 60px;
-    text-transform: capitalize;
-    margin: auto;
-}
-
-.p-analytics {
-    max-width: 450px;
-    font-size: 20px;
-    padding-top: 20px;
-    margin: auto;
-}
-
-.btn3 {
-    background-color: #9091dc;
-    font-weight: bold;
-    font-size: 20px;
-    color: white;
-    border-radius: 50px;
-    text-transform: uppercase;
-    min-height: 80px;
-    min-width: 350px;
-    cursor: pointer;
-}
-
-
-/* analytics end */
-
-.browse-hero {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    color: #ffff;
-    padding-top: 40px;
-}
-
-.browse-text {
-    max-width: 600px;
-    font-size: 60px;
-    font-weight: bold;
-    margin: auto;
-}
-
-.p-browse {
-    max-width: 450px;
-    font-size: 20px;
-    padding-top: 20px;
-}
-
-
-/* browse section end */
-
-.testmonials {
-    color: #fff;
-    margin-top: 12rem;
-}
-
-.testmonials-hero {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.text5 {
-    font-size: 22px;
-    text-transform: uppercase;
-    color: white;
-    letter-spacing: 2px;
-    margin-left: 23px;
-}
-
-.up {
-    margin-left: 25rem;
-}
-
-.ellipse {
-    padding-left: 8rem;
-    margin-top: 1.5rem;
-}
-
-.text3 {
-    padding-left: 6rem;
-    margin-top: 3rem;
-    letter-spacing: 3px;
-    font-size: 20px;
-}
-
-.down {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.text6 {
-    font-size: 60px;
-    margin-left: -8rem;
-    font-weight: bold;
-    text-transform: capitalize;
-}
-
-.card1,
-.card2,
-.card3 {
-    margin-top: 4rem;
-    border-radius: 20px;
-    border: 3px solid gray;
-    height: 24rem;
-    width: 21rem;
-}
-
-.content {
-    font-size: 1.2rem;
-    line-height: 1.6;
-}
-
-
-/* testimonials section end */
-
-.thing {
-    margin-top: 5rem;
-}
-
-.hero-thing {
-    border: .5px solid gray;
-    background: linear-gradient(135deg, #ABD9D4, #585CC7, #5151C6);
-    border-radius: 30px;
-    height: 30rem;
-}
-
-.text7 {
-    font-size: 22px;
-    text-transform: uppercase;
-    color: black;
-    letter-spacing: 2px;
-    margin-left: 25rem;
-    margin-top: 4rem;
-}
-
-.text8 {
-    font-size: 60px;
-    font-weight: bold;
-    text-transform: capitalize;
-    margin-left: 18rem;
-    margin-top: 2rem;
-}
-
-.btn4 {
-    background-color: black;
-    font-weight: bold;
-    font-size: 20px;
-    color: white;
-    padding: 30px 100px;
-    border-radius: 50px;
-    margin-top: 60px;
-    text-transform: uppercase;
-    margin-left: 22rem;
-}
-
-
-/* thing section end */
-
-.footer {
-    margin-top: 10rem;
-    margin-bottom: 13rem;
-}
-
-.text13 {
-    font-size: 25px;
-}
-
-.text9 {
-    margin-top: -25px;
-    padding-left: 12rem;
-}
-
-.list li a {
-    padding-left: 11rem;
-    list-style: none;
-    text-decoration: none;
-    color: #fff;
-    font-size: 15px;
-}
-
-.text10 {
-    margin-top: -18.5rem;
-    padding-left: 25rem;
-}
-
-.list1 li a {
-    padding-left: 24rem;
-    list-style: none;
-    text-decoration: none;
-    color: #fff;
-    font-size: 15px;
-}
-
-.text11 {
-    margin-top: -14.5rem;
-    padding-left: 41rem;
-}
-
-.list2 li a {
-    padding-left: 40rem;
-    list-style: none;
-    text-decoration: none;
-    color: #fff;
-    font-size: 15px;
-}
-
-.text12 {
-    margin-top: -18.5rem;
-    padding-left: 51rem;
-    font-size: 25px;
-}
-
-.h3-border-box {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 15px;
-    border-radius: 50px;
-    width: 380px;
-    /* Adjust as needed */
-    margin-top: 5rem;
-    margin-left: 50rem;
-    background-color: #13124F;
-    color: #fff;
-}
-
-.h3-heading {
-    margin: 0;
-    font-size: 20px;
-    color: #aea5cd;
-}
-
-.border-btn {
-    background-color: #585CC7;
-    color: white;
-    border: none;
-    padding: 15px 30px;
-    font-size: 16px;
-    font-weight: bold;
-    letter-spacing: 2px;
-    border-radius: 50px;
-    margin-top: 0rem;
-}
-
-.border-btn:hover {
-    background-color: #4144b0;
-}
+    @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+    * {
+        font-family: 'Oleo Script Swash Caps', cursive;
+        font-family: 'Open Sans', sans-serif;
+        font-family: 'Roboto', sans-serif;
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    
+    body {
+        background-color: #000235;
+    }
+    
+    .container {
+        max-width: 1200px;
+        margin: auto;
+        padding: 0 30px;
+    }
+    
+    .header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-right: 40px;
+        padding-top: 40px;
+    }
+    
+    .nav-links {
+        display: flex;
+        justify-content: center;
+        list-style: none;
+        align-items: center;
+        margin: 0;
+        gap: 20px;
+    }
+    
+    .logo {
+        color: white;
+        max-width: 50px;
+        font-size: 20px;
+    }
+    
+    .nav-links a {
+        text-decoration: none;
+        color: #ffff;
+        font-size: 18px;
+    }
+    
+    .dot {
+        background-color: #fff;
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        display: inline-block;
+        margin-right: 10px;
+    }
+    
+    .butn {
+        background-color: #342e88;
+        color: #fff;
+        border-radius: 50px;
+        padding: 15px 30px;
+        cursor: pointer;
+        border: none;
+    }
+    /* nav bar end */
+    
+    .hero-section {
+        color: white;
+    }
+    
+    .hero-div {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    
+    .hero-section .left h1 {
+        max-width: 400px;
+        font-size: 80px;
+        margin: auto;
+    }
+    
+    .end-herosection {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-top: 80px;
+    }
+    /* hero-section-end */
+    
+    .links {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        width: 100%;
+        text-align: center;
+        gap: 20px;
+        display: flex;
+        justify-content: space-around;
+    }
+    
+    .p-content {
+        max-width: 360px;
+        font-size: 20px;
+    }
+    
+    .link1,
+    .link2 {
+        font-weight: bold;
+        font-size: 20px;
+        color: white;
+        text-decoration: none;
+        border: 2px solid #fff;
+        padding: 20px 30px;
+        border-radius: 50px;
+        max-width: 250px;
+        flex-basis: 50%;
+        display: block;
+    }
+    
+    .link1 {
+        border: none;
+        background-color: #9091dc;
+    }
+    
+    .feature {
+        margin-top: 5rem;
+    }
+    
+    h2 {
+        color: #fff;
+        text-transform: uppercase;
+        margin-bottom: 30px;
+    }
+    
+    .feature-div {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        border: 3px solid rgba(0, 0, 0, 0.856);
+        min-height: 100px;
+        border-radius: 10px;
+    }
+    /* features section end */
+    
+    .hero-analytics {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        color: #fff;
+        padding: 50px;
+        gap: 50px;
+    }
+    
+    .text1 {
+        text-transform: uppercase;
+        color: rgb(222, 226, 226);
+        margin-bottom: 10px;
+    }
+    
+    .text2 {
+        max-width: 500px;
+        font-size: 60px;
+        text-transform: capitalize;
+        margin: auto;
+    }
+    
+    .p-analytics {
+        max-width: 450px;
+        font-size: 20px;
+        /* padding-top: 20px; */
+        margin: auto;
+        padding: 20px 0px;
+        border: none;
+    }
+    
+    .btn3 {
+        background-color: #9091dc;
+        font-weight: bold;
+        font-size: 20px;
+        color: white;
+        border-radius: 50px;
+        text-transform: uppercase;
+        min-height: 80px;
+        min-width: 350px;
+        cursor: pointer;
+    }
+    /* analytics end */
+    
+    .browse-hero {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        color: #ffff;
+        padding-top: 40px;
+    }
+    
+    .browse-text {
+        max-width: 600px;
+        font-size: 60px;
+        font-weight: bold;
+        margin: auto;
+    }
+    
+    .p-browse {
+        max-width: 450px;
+        font-size: 20px;
+        padding: 20px 0px;
+    }
+    /* browse section end */
+    
+    .testmonials-hero {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        color: #fff;
+        padding-top: 100px;
+    }
+    
+    .text5 {
+        max-width: 300px;
+        margin: auto;
+        text-align: center;
+        font-size: 25px;
+        text-transform: uppercase;
+        color: #e7e4e4;
+    }
+    
+    .text6 {
+        max-width: 500px;
+        font-size: 50px;
+        margin: auto;
+        text-align: center;
+        padding-top: 15px;
+    }
+    
+    .down {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 50px 0px;
+        gap: 20px;
+    }
+    
+    .card1 {
+        background-color: #141645;
+        max-width: 300px;
+        margin: auto;
+        border: 1px solid white;
+        text-align: center;
+        padding: 10px;
+        border-radius: 20px;
+    }
+    
+    .text3 {
+        padding-top: 50px;
+    }
+    
+    .content {
+        padding: 20px 0px;
+        font-size: 15px;
+        line-height: 1.5;
+        color: #f5f5f8;
+    }
+    /* testimonials section end */
+    
+    .hero-thing {
+        color: #fff;
+        background: linear-gradient(135deg, #ABD9D4, #585CC7, #5151C6);
+        border-radius: 20px;
+        padding: 50px;
+        text-align: center;
+        max-width: 90%;
+        margin: auto;
+    }
+    
+    .text7 {
+        text-transform: uppercase;
+        color: #000235;
+        max-width: 300px;
+        margin: auto;
+        font-size: 25px;
+    }
+    
+    .text8 {
+        max-width: 400px;
+        margin: auto;
+        font-size: 50px;
+        text-transform: capitalize;
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+    /*     
+    .btn4 {
+        text-transform: uppercase;
+        max-width: 300px;
+        width: 100%;
+        min-height: 70px;
+        font-size: 20px;
+        background-color: #000106;
+    } */
+    
+    .btn4 {
+        max-width: 300px;
+        width: 100%;
+        min-height: 70px;
+        font-size: 20px;
+        text-transform: uppercase;
+        color: white;
+        background-color: #000106;
+        border-radius: 50px;
+        border: none;
+    }
+    /* thing section end */
+    
+    .footer {
+        color: #fff;
+        display: flex;
+        justify-content: space-between;
+        font-family: Arial, sans-serif;
+        padding: 150px 50px 40px 50px;
+    }
+    
+    .footer-content {
+        flex-direction: column;
+        display: flex;
+    }
+    
+    .footer-content ul {
+        text-decoration: none;
+    }
+    
+    .footer-Menu,
+    .footer-Market,
+    .footer-Content {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .menu,
+    .market,
+    .contact {
+        list-style: none;
+        padding: 30px 0px;
+        margin: 0;
+    }
+    
+    .menu li,
+    .market li,
+    .contact li {
+        margin-bottom: 10px;
+    }
+    
+    .menu a,
+    .market a,
+    .contact a {
+        color: rgb(210, 202, 202);
+        text-decoration: none;
+        font-size: 15px;
+    }
+    
+    .newsletter {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .newsletter h3 {
+        font-size: 20px;
+        padding-bottom: 30px;
+    }
+    
+    .newsletter-form {
+        padding-top: 50px;
+        display: flex;
+        position: relative;
+        background-color: #1C1C3D;
+        padding: 5px;
+        border-radius: 50px;
+    }
+    
+    .newsletter-form input[type="email"] {
+        background-color: transparent;
+        font-size: 16px;
+        border: none;
+        padding: 15px 20px;
+        border-radius: 50px
+    }
+    
+    .newsletter-form button {
+        background-color: #7F7FD5;
+        border: none;
+        padding: 5px 50px;
+        border-radius: 50px;
+        cursor: pointer;
+        font-size: 15px;
+    }
